issue created by default paragraph margin property.
css multicolumn layout issue. It apply margin in different way between first element of column 1 and first element of column 2. to fix that i manually set margin to 0. which implicity had a value.

--- a/css/movie.css
+++ b/css/movie.css
@@ -86,6 +86,7 @@ body {
     font-size: 8pt;
     font-weight: bold;
     background-color: #E8DC9B;
+    margin: 0px;
 }
 
 .comment-by {
